--- a/FE/tsconfig.json
+++ b/FE/tsconfig.json
@@ -1,5 +1,7 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
+	"include": ["src/**/*"],
+	"exclude": ["node_modules/*"],
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
